bdr.BDR.scala.error
Erreur de compilation :
BDR:9: error: type mismatch;
 found   : Unit
 required: Boolean
      if (lettre="R")
                ^BDR:11: error: type mismatch;
 found   : Char('L')
 required: String
      else if (lettre='L')
                      ^BDR:11: error: type mismatch;
 found   : Unit
 required: Boolean
      else if (lettre='L')
                     ^BDR:13: error: type mismatch;
 found   : Char('I')
 required: String
      else if (lettre='I')
                      ^BDR:13: error: type mismatch;
 found   : Unit
 required: Boolean
      else if (lettre='I')
                     ^BDR:15: error: type mismatch;
 found   : Char('A')
 required: String
      else if (lettre='A')
                      ^BDR:15: error: type mismatch;
 found   : Unit
 required: Boolean
      else if (lettre='A')
                     ^BDR:17: error: type mismatch;
 found   : Char('B')
 required: String
      else if (lettre='B')
                      ^BDR:17: error: type mismatch;
 found   : Unit
 required: Boolean
      else if (lettre='B')
                     ^BDR:19: error: type mismatch;
 found   : Char('C')
 required: String
      else if (lettre='C')
                      ^BDR:19: error: type mismatch;
 found   : Unit
 required: Boolean
      else if (lettre='C')
                     ^BDR:21: error: type mismatch;
 found   : Char('Z')
 required: String
      else if (lettre='Z')
                      ^BDR:21: error: type mismatch;
 found   : Unit
 required: Boolean
      else if (lettre='Z')
                     ^BDR:23: error: type mismatch;
 found   : Char('Y')
 required: String
      else if (lettre='Y')
                      ^BDR:23: error: type mismatch;
 found   : Unit
 required: Boolean
      else if (lettre='Y')
                     ^BDR:25: error: type mismatch;
 found   : Char('X')
 required: String
      else (lettre='X')
                   ^